[metadata]
name = es_stats_zabbix
description = "Collect stats from es_stats for ingest by Zabbix"
long_description = file: README.rst
version = attr: es_stats_zabbix.__version__
author = Aaron Mildenstein
author_email = aaron@mildensteins.com
url = http://github.com/untergeek/es_stats_zabbix
license = Apache License, Version 2.0
keywords = elasticsearch stats
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = es_stats_zabbix
include_package_data = True
install_requires =
    setuptools>=30.3.0
    flask_restful>=0.3.6
    click>=6.7
    es_client>=1.1.1
    es_stats>=1.2.0

setup_requires =
    setuptools>=30.3.0
    flask_restful>=0.3.6
    click>=6.7
    es_client>=1.1.1
    es_stats>=1.2.0

tests_require = 
    mock
    nose
    coverage
    nosexcover

[options.entry_points]
console_scripts = 
    esz_backend = es_stats_zabbix.cli.entrypoint:run
    esz_discovery = es_stats_zabbix.cli.entrypoint:run
    esz_get_stat = es_stats_zabbix.cli.entrypoint:run
    esz_cluster_discovery = es_stats_zabbix.cli.entrypoint:run
    esz_node_discovery = es_stats_zabbix.cli.entrypoint:run
    esz_trapper_discovery = es_stats_zabbix.cli.entrypoint:run
    esz_trapper_stats = es_stats_zabbix.cli.entrypoint:run

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1